[gd_scene load_steps=4 format=3 uid="uid://ivmhtvn15ll1"]

[ext_resource type="Script" path="res://resources/UI/on_screen_equipment_slot.gd" id="1_tymku"]
[ext_resource type="Texture2D" uid="uid://clfe1ycef186g" path="res://assets/Ui/Dialog/FacesetBox.png" id="1_whko7"]
[ext_resource type="Theme" uid="uid://d7ptudjtc0c7" path="res://themes/text_theme.tres" id="2_tx5fq"]

[node name="OnScreenEquipmentSlot" type="VBoxContainer"]
script = ExtResource("1_tymku")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_whko7")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="StacksLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -28.0
offset_right = -5.0
offset_bottom = -5.0
theme = ExtResource("2_tx5fq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 6.0
offset_right = -1.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="CooldownRect" type="ColorRect" parent="NinePatchRect"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 50.0
offset_bottom = 6.0
color = Color(1, 0.254902, 0.427451, 0.513726)

[node name="SlotLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_tx5fq")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "R HAND"
horizontal_alignment = 1
vertical_alignment = 1
